--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <h1><i class="fas fa-cocktail"></i>Laura's Cocktail Playground</h1>
+        <h1><i class="fas fa-cocktail"></i>Olander's Cocktail Playground</h1>
         <p>Manage your favorite cocktail recipes</p>
         <div id="admin-status" class="admin-status" style="display: none">
           <span class="admin-badge"
@@ -80,7 +80,7 @@
                 ></textarea>
               </div>
               <!-- Add this to your form, after the file input -->
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <label for="theJpegFile">Upload an image</label>
                 <input
                   type="file"
@@ -101,6 +101,13 @@
                   Widget
                 </button>
                 <div id="image-upload-preview" style="margin-top: 8px"></div>
+              </div> -->
+              <div class="form-group image-upload-area">
+                <label>Image (Optional)</label>
+                <button id="cloudinary-upload-btn" class="btn btn-secondary">
+                  <i class="fas fa-cloud-upload-alt"></i> Upload with Cloudinary
+                </button>
+                <div id="image-upload-preview" style="margin-top: 10px"></div>
               </div>
 
               <div class="form-group">
