--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <body>
     <div class="container">
       <header class="header">
-        <h1><i class="fas fa-cocktail"></i>Olander's Cocktail Playground</h1>
+        <h1>
+          <i class="fas fa-cocktail"></i>Allister Olander's Cocktail Playground
+        </h1>
         <p>Manage your favorite cocktail recipes</p>
         <div id="admin-status" class="admin-status" style="display: none">
           <span class="admin-badge"
