--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <header class="header">
         <h1>
-          <i class="fas fa-cocktail"></i>Alvin Olander's Cocktail Playground
+          <i class="fas fa-cocktail"></i>Alvin Olander's Cock-Block
         </h1>
         <p>Manage your favorite cocktail recipes</p>
         <div id="admin-status" class="admin-status" style="display: none">
