--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
   <body>
     <div class="container">
       <header class="header">
-        <h1>
-          <i class="fas fa-cocktail"></i>Alvin Olander's Cock-Block
-        </h1>
-        <p>Manage your favorite cocktail recipes</p>
+        <h1><i class="fas fa-cocktail"></i>Alvin Olander's Cock-Block</h1>
+        <p>Manage your favorite cocktail recipes. Don't be a tool.</p>
         <div id="admin-status" class="admin-status" style="display: none">
           <span class="admin-badge"
             ><i class="fas fa-shield-alt"></i> Admin Mode</span
